Apr 06 2004  devel  Fixed ACX100 FCS bytes
Apr 05 2004  devel  Fixed packet count bug in csv
Apr 04 2004  devel  Merged patch from Jamie for channel dwelling (multisecond
                     channel hopping)
Apr 02 2004  devel  Fixed bug in gpsmap cache that assigned the same id to all
                     points, eating an entire file if any points were filtered.
                    Code cleanup - Fixed several -pedantic warnings in gpsmap
                    Various other -pedantic cleanups
                    Flagged networks as dirty after a sort op to force a 
                     resort even when disconnected
                    Made gpsmap cache creation errors nonfatal
Mar 31 2004  devel  Fixed gpsmap cache error reporting mistake
                    Changed 'best signal' and 'best noise' stuff to handle dBm
                    Fixed signal recording for wext
                    Changed text in panel signal window slightly
                    Fixed gpsmap to count actual valid samples instead of all
                     samples in a file when determining if any samples were
                     collected
                    Added --color-saturation and --map-intensity to gpsmap to
                     change the greyscale desaturation and overall intensity
                     of the background map image.
Mar 30 2004  devel  Tentative support for calculating SNR from signal levels
                     in dBm for Kismet and gpsmap
Mar 29 2004  devel  Removed size restriction testing for now, let the remote
                     mapsource blow up if we're not a valid size.
                    Put scale ranges into --help
                    Fixed error in tcpclient reading new major/minors
                    Added Null mapsource for blank background to gpsmap
Mar 27 2004  devel  Fixed Mapblast map source in GPSMap, left Earthamap as the
                     default however.  (Thanks, poptix!)
                    Fixed mapblast user-scale